--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^8.15.12",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.6.0",
+    "firebase-tools": "^14.27.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
